src/esp-idf/smart_flowerpot/esp32/drivers/motion/build/log/idf_py_stdout_output_26066
Command: ninja all
[1/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/motion_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/motion_main.c.obj 
/home/warezoid/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20251107/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"/media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion/build/config" -I"/media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion/main" -I/esp/esp-idf/components/newlib/platform_include -I/esp/esp-idf/components/freertos/config/include -I/esp/esp-idf/components/freertos/config/include/freertos -I/esp/esp-idf/components/freertos/config/xtensa/include -I/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/esp/esp-idf/components/freertos/esp_additions/include -I/esp/esp-idf/components/esp_hw_support/include -I/esp/esp-idf/components/esp_hw_support/include/soc -I/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/esp/esp-idf/components/esp_hw_support/dma/include -I/esp/esp-idf/components/esp_hw_support/ldo/include -I/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/esp/esp-idf/components/esp_hw_support/power_supply/include -I/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/esp/esp-idf/components/heap/include -I/esp/esp-idf/components/heap/tlsf -I/esp/esp-idf/components/log/include -I/esp/esp-idf/components/soc/include -I/esp/esp-idf/components/soc/esp32 -I/esp/esp-idf/components/soc/esp32/include -I/esp/esp-idf/components/soc/esp32/register -I/esp/esp-idf/components/hal/platform_port/include -I/esp/esp-idf/components/hal/esp32/include -I/esp/esp-idf/components/hal/include -I/esp/esp-idf/components/esp_rom/include -I/esp/esp-idf/components/esp_rom/esp32/include -I/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/esp/esp-idf/components/esp_rom/esp32 -I/esp/esp-idf/components/esp_common/include -I/esp/esp-idf/components/esp_system/include -I/esp/esp-idf/components/esp_system/port/soc -I/esp/esp-idf/components/esp_system/port/include/private -I/esp/esp-idf/components/xtensa/esp32/include -I/esp/esp-idf/components/xtensa/include -I/esp/esp-idf/components/xtensa/deprecated_include -I/esp/esp-idf/components/lwip/include -I/esp/esp-idf/components/lwip/include/apps -I/esp/esp-idf/components/lwip/include/apps/sntp -I/esp/esp-idf/components/lwip/lwip/src/include -I/esp/esp-idf/components/lwip/port/include -I/esp/esp-idf/components/lwip/port/freertos/include -I/esp/esp-idf/components/lwip/port/esp32xx/include -I/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I"/media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion/drainage_vent/include" -I/esp/esp-idf/components/esp_driver_gpio/include -I/esp/esp-idf/components/esp_timer/include -I"/media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/libraries/pwm_generator/include" -I/esp/esp-idf/components/esp_driver_ledc/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap "-fmacro-prefix-map=/media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion=." -fmacro-prefix-map=/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/motion_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/motion_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/motion_main.c.obj -c '/media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion/main/motion_main.c'
/media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion/main/motion_main.c: In function 'app_main':
/media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion/main/motion_main.c:23:5: error: unknown type name 'vsrp_dataset'
   23 |     vsrp_dataset vs = {
      |     ^~~~~~~~~~~~
/media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion/main/motion_main.c:24:9: error: field name not in record or union initializer
   24 |         .power_cut_off_timer = NULL,
      |         ^
/media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion/main/motion_main.c:24:9: note: (near initialization for 'vs')
/media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion/main/motion_main.c:24:32: error: initialization of 'int' from 'void *' makes integer from pointer without a cast [-Wint-conversion]
   24 |         .power_cut_off_timer = NULL,
      |                                ^~~~
/media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion/main/motion_main.c:24:32: note: (near initialization for 'vs')
/media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion/main/motion_main.c:25:9: error: field name not in record or union initializer
   25 |         .event_start_tick = 0,
      |         ^
/media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion/main/motion_main.c:25:9: note: (near initialization for 'vs')
/media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion/main/motion_main.c:25:29: warning: excess elements in scalar initializer
   25 |         .event_start_tick = 0,
      |                             ^
/media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion/main/motion_main.c:25:29: note: (near initialization for 'vs')
/media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion/main/motion_main.c:26:9: error: field name not in record or union initializer
   26 |         .control_flags = 0b11000000
      |         ^
/media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion/main/motion_main.c:26:9: note: (near initialization for 'vs')
/media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion/main/motion_main.c:26:26: warning: excess elements in scalar initializer
   26 |         .control_flags = 0b11000000
      |                          ^~~~~~~~~~
/media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion/main/motion_main.c:26:26: note: (near initialization for 'vs')
/media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion/main/motion_main.c:28:24: error: passing argument 1 of 'drainage_vent_init' from incompatible pointer type [-Wincompatible-pointer-types]
   28 |     drainage_vent_init(&vs);  //this should return if init is done or error occured!
      |                        ^~~
      |                        |
      |                        int *
In file included from /media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion/main/motion_main.c:2:
/media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion/drainage_vent/include/drainage_vent.h:33:50: note: expected 'drainage_vent_dataset_t *' but argument is of type 'int *'
   33 | void drainage_vent_init(drainage_vent_dataset_t *vent_sys);
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
[2/11] Performing build step for 'bootloader'
[1/1] cd "/media/warezoid/Storage drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion/build/bootloader/esp-idf/esptool_py" && /home/warezoid/.espressif/python_env/idf5.5_py3.12_env/bin/python /esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /media/warezoid/Storage\ drive1/warezoid/work/projects/smart_flowerpot/code/src/esp-idf/smart_flowerpot/esp32/drivers/motion/build/bootloader/bootloader.bin
Bootloader binary size 0x66c0 bytes. 0x940 bytes (8%) free.
[3/11] Building C object esp-idf/drainage_vent/CMakeFiles/__idf_drainage_vent.dir/drainage_vent.c.obj
ninja: build stopped: subcommand failed.
